Fixes add, firedac drivers by default

--- a/repman/dbxdrivers.ini
+++ b/repman/dbxdrivers.ini
@@ -149,6 +149,15 @@ Database=
 User_name=
 Password=
 DataSource=
+CharacterSet=
+Port=
+Protocol=
+SqlDialect=3
+RoleName=
+Server=
+IBAdvanced=
+DatabaseFile=
+OSAuthent=
 
 [DriverID]
 ADS=0
