--- a/repman/bin32/dbxdrivers.ini
+++ b/repman/bin32/dbxdrivers.ini
@@ -14,6 +14,7 @@ Odbc=1
 Oracle=1
 SQLite=1 
 ZeosLib=1
+FireDac=1
 
 [DataSnap]
 DriverUnit=Data.DBXDataSnap
@@ -141,6 +142,42 @@ ErrorResourceFile=
 LocaleCode=0000
 IsolationLevel=ReadCommitted
 Decimal Separator=.
+
+[FireDac]
+DriverId=FB
+Database=
+User_name=
+Password=
+DataSource=
+CharacterSet=
+Port=
+Protocol=
+SqlDialect=3
+RoleName=
+Server=
+IBAdvanced=
+DatabaseFile=
+OSAuthent=
+
+[DriverID]
+ADS=0
+ASA=1
+DB2=2
+DS=3
+FB=4
+IB=5
+IBLite=6
+Infx=7
+MSAcc=8
+MSSQL=9
+MYSQL=10
+ODBC=11
+Ora=12
+PG=13
+SQLite=14
+TData=15
+TDBX=16
+
 
 [DB2 TransIsolation]
 DirtyRead=0
@@ -335,12 +372,11 @@ Encrypted=False
 
 [Odbc]
 DriverUnit=Data.DBXOdbc
-DriverPackageLoader=TDBXOdbcDriverLoader,DBXOdbcDriver180.bpl
-DriverAssemblyLoader=Borland.Data.TDBXOdbcDriverLoader,Borland.Data.DbxOdbcDriver,Version=18.0.0.0,Culture=neutral,PublicKeyToken=91d62ebb5b0d1b1b
-MetaDataPackageLoader=TDBXOdbcMetaDataCommandFactory,DbxOdbcDriver180.bpl
-MetaDataAssemblyLoader=Borland.Data.TDBXOdbcMetaDataCommandFactory,Borland.Data.DbxOdbcDriver,Version=18.0.0.0,Culture=neutral,PublicKeyToken=91d62ebb5b0d1b1b
 ConnectionString=
-
+Database=
+User_Name=
+Password=
+IsolationLevel=ReadCommitted
 
 [Oracle]
 DriverUnit=Data.DBXOracle
@@ -374,9 +410,8 @@ RepeatableRead=2
 
 [Sqlite]
 DriverUnit=Data.DbxSqlite
-DriverPackageLoader=TDBXSqliteDriverLoader,DBXSqliteDriver260.bpl
-MetaDataPackageLoader=TDBXSqliteMetaDataCommandFactory,DbxSqliteDriver260.bpl
-Database=database.data
+DriverPackageLoader=TDBXSqliteDriverLoader,DBXSqliteDriver170.bpl
+MetaDataPackageLoader=TDBXSqliteMetaDataCommandFactory,DbxSqliteDriver170.bpl
 
 
 [ZeosLib]
@@ -448,3 +483,5 @@ postgresql-9=35
 sqlite=36
 sqlite-3=37
 sybse=38
+firebird-3.0=39
+
