--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,8 @@ repman/bin64/64bit/repwebserver.dll
 repman/bin64/net2/zxing.pdb
 repman/bin32/fbclient_fb21.dll
 repman/bin32/fbclient_fb4.dll
+repman/utils/printreptopdf/binrl64/printreptopdf
+server/web/binr32/
+server/web/binr64/repwebserver.dll
+repman/binr64/net2/ClosedXML.dll
+repman/binr64/
