--- a/server/config/repserverconfigxp.dproj
+++ b/server/config/repserverconfigxp.dproj
@@ -111,6 +111,7 @@
         <Icon_MainIcon>repserverconfigxp_Icon3.ico</Icon_MainIcon>
         <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
+        <BT_BuildType>Debug</BT_BuildType>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
