--- a/server/service/repserviceinstall.dproj
+++ b/server/service/repserviceinstall.dproj
@@ -103,6 +103,7 @@
         <DCC_ExeOutput>.\binr32</DCC_ExeOutput>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
+        <BT_BuildType>Debug</BT_BuildType>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
