--- a/activex/reportman.dproj
+++ b/activex/reportman.dproj
@@ -245,7 +245,7 @@
                 <Parameters/>
                 <Language>
                     <Language Name="ProjectLang">$00000C0A</Language>
-                    <Language Name="RootDir">..\..\..\..\..\..\..\desarrollo\prog\toni\reportman\activex\</Language>
+                    <Language Name="RootDir">C:\desarrollo\prog\toni\reportman\activex\</Language>
                 </Language>
                 <VersionInfo>
                     <VersionInfo Name="IncludeVerInfo">True</VersionInfo>
