--- a/repman/utils/rptranslator/rptranslate.dproj
+++ b/repman/utils/rptranslator/rptranslate.dproj
@@ -112,6 +112,7 @@
         <DCC_DcpOutput>.\dcur32</DCC_DcpOutput>
         <DCC_ExeOutput>.\binr32</DCC_ExeOutput>
         <DCC_DcuOutput>.\dcur32</DCC_DcuOutput>
+        <BT_BuildType>Debug</BT_BuildType>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
