--- a/repman/dbxdrivers.ini
+++ b/repman/dbxdrivers.ini
@@ -445,43 +445,19 @@ Serializable=4
 
 [Database Protocol]
 ado=0
-ASA7=1
-ASA8=2
-ASA9=3
-ASA12=4
-firebird-1.0=5
-firebird-1.5=6
-firebird-2.0=7
-firebird-2.1=8
-firebird-2.5=9
-firebirdd-1.0=10
-firebirdd-1.5=11
-firebirdd-2.0=12
-firebirdd-2.1=13
-firebirdd-2.5=14
-FreeTDS_MsSQL<=6.5=15
-FreeTDS_MsSQL>=2005=16
-FreeTDS_MsSQL-2000=17
-FreeTDS_MsSQL-7.0=18
-FreeTDS_Sybase<10=19
-FreeTDS_Sybase-10+=20
-interbase-6=21
-MariaDB-5=22
-mssql=23
-mysql=24
-mysql-4.1=25
-mysql-5=26
-mysqld-4.1=27
-mysqld-5=28
-oracle=29
-oracle-9i=30
-pooled.*=31
-postgresql=32
-postgresql-7=33
-postgresql-8=34
-postgresql-9=35
-sqlite=36
-sqlite-3=37
-sybse=38
-firebird-3.0=39
-
+asa=1
+asa_capi=2
+firebird=3
+interbase=4
+mariadb=5
+mssql=6
+mysql=7
+odbc_a=8
+odbc_w=9
+OleDB=10
+oracle=11
+pooled.*=12
+postgresql=13
+sqlite=14
+sybase=15
+WebServiceProxy=16
