Add document metadata and additional data embedded files

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ activex/test/TestReportmanX/TestReportmanX/bin/Debug/net8.0-windows/TestReportma
 activex/test/TestReportmanX/TestReportmanX/bin/
 activex/test/TestReportmanX/TestReportmanX/obj/
 activex/test/TestReportmanX/TestReportmanX/TestReportmanX.csproj.user
+activex/bin32/reportman.oca
