--- a/repman/repmandxp.dproj
+++ b/repman/repmandxp.dproj
@@ -1288,10 +1288,10 @@
                 </DeployClass>
                 <ProjectRoot Platform="OSX32" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="OSX64" Name="$(PROJECTNAME)"/>
-                <ProjectRoot Platform="Android64" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="Win32" Name="$(PROJECTNAME)"/>
-                <ProjectRoot Platform="Android" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="OSXARM64" Name="$(PROJECTNAME)"/>
+                <ProjectRoot Platform="Android64" Name="$(PROJECTNAME)"/>
+                <ProjectRoot Platform="Android" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="Win64" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="iOSDevice32" Name="$(PROJECTNAME).app"/>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
@@ -1472,6 +1472,7 @@
             <Form>FRpEmbeddedFile</Form>
         </DCCReference>
         <DCCReference Include="..\rptruetype.pas"/>
+        <DCCReference Include="..\rpmdundocue.pas"/>
         <None Include="Profiling\AQtimeModule1.aqt"/>
         <None Include="FireDAC.inc"/>
         <BuildConfiguration Include="Base">
